--- a/.github/workflows/check-artifacory-conn.yml
+++ b/.github/workflows/check-artifacory-conn.yml
@@ -25,7 +25,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: 
+        run: |
           echo Checking connection to artifactory UI
           curl -k http://34.70.251.160/ui/login/
           echo Checking connection to artifactory api
