--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,15 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Test issueops
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+  issues: 
+    types: [opened, edited]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -32,5 +29,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo "Issue title: ${{ github.event.issue.title}}"
+          echo "Issue description: ${{ github.event.issue.body}}"
