--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
   issueops: 
+    needs: build
     runs-on: ubuntu-latest
     steps:
       # Runs a set of commands using the runners shell
