--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -6,7 +6,7 @@ name: Test issueops
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   issues: 
-    types: [opened, edited]
+    types: [opened, edited, labeled]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -14,7 +14,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+    if: github.event.label.name == 'arti-repo'
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
