--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -6,7 +6,7 @@ name: Test issueops
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   issues: 
-    types: [opened, edited, labeled]
+    types: [opened, edited]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
