--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    if: github.event.label.name == 'arti-repo'
+    if: github.event.issue.label.name == 'arti-repo'
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
