--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # if: github.event.issue.label.name == 'arti-repo'
+    # if: github.event.issue.labels.name == 'arti-repo'
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -34,8 +34,8 @@ jobs:
         run: |
           echo "Issue title: ${{ github.event.issue.title}}"
           echo "Issue description: ${{ github.event.issue.body}}"
-          echo "Issue label: ${{ github.event.issue.label.name }}"
-          echo "Issue label: ${{ github.event.label.name }}"
+          echo "Issue label: ${{ github.event.issue.labels.name }}"
+          echo "Issue label: ${{ github.event.labels.name }}"
           echo "$GITHUB_CONTEXT"
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
