--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -15,6 +15,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # if: github.event.label.name == 'arti-repo'
+    if: contains(github.event.issue.labels.*.name, 'arti-repo')
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -34,7 +35,7 @@ jobs:
         run: |
           echo "Issue title: ${{ github.event.issue.title}}"
           echo "Issue description: ${{ github.event.issue.body}}"
-          echo "Issue label: ${{ github.event.issue.labels.name }}"
+          echo "Issue label: ${{ github.event.issue.labels.*.name }}"
           echo "Issue label: ${{ github.event.label.name }}"
           echo "$GITHUB_CONTEXT"
         env:
