--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -27,15 +27,15 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
   issueops: 
-    needs: build
-    runs-on: ubuntu-latest
+    #needs: build
+    #runs-on: ubuntu-latest
     steps:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo "Issue title: ${{ github.event.issue.title}}"
           echo "Issue description: ${{ github.event.issue.body}}"
-          echo "Issue label: ${{ github.event.issue.labels.*.name }}"
+          echo "Issue label: ${{ toJson(github.event.issue.labels.*.name) }}"
           echo "Issue label: ${{ github.event.label.name }}"
           echo "$GITHUB_CONTEXT"
         env:
