--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -26,12 +26,12 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
-  issueops: 
+  #issueops: 
     #needs: build
     #runs-on: ubuntu-latest
-    steps:
+    #steps:
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Issue-ops
         run: |
           echo "Issue title: ${{ github.event.issue.title}}"
           echo "Issue description: ${{ github.event.issue.body}}"
