--- a/.github/workflows/jfrog-cli.yml
+++ b/.github/workflows/jfrog-cli.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/checkout@v1
       - name: Setup JFrog CLI
         uses: jfrog/setup-jfrog-cli@v1
+        with:
+          version: 2.2.1
         env:
           JF_ARTIFACTORY_SERVER: ${{ secrets.JF_ARTIFACTORY_SERVER_1 }}
       - name: Run JFrog CLI
