--- a/.github/workflows/jfrog-cli.yml
+++ b/.github/workflows/jfrog-cli.yml
@@ -10,10 +10,10 @@ jobs:
         uses: actions/checkout@v1
       - name: Setup JFrog CLI
         uses: jfrog/setup-jfrog-cli@v1
-        #with:
-         # version: '2.2.0'
         env:
           JF_ARTIFACTORY_SERVER: ${{ secrets.JF_ARTIFACTORY_SERVER_1 }}
+        with:
+          version: '2.2.0'
       - name: Run JFrog CLI
         run: |
           # Collect environment variables for the build
