--- a/.github/workflows/jfrog-cli.yml
+++ b/.github/workflows/jfrog-cli.yml
@@ -9,9 +9,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Setup JFrog CLI
-      - uses: jfrog/setup-jfrog-cli@v1
-        with:
-          version: latest
+        uses: jfrog/setup-jfrog-cli@v1
+        #with:
+        #  version: latest
         env:
           JF_ARTIFACTORY_SERVER: ${{ secrets.JF_ARTIFACTORY_SERVER_1 }}
       - name: Run JFrog CLI
