--- a/.github/workflows/arti-object-creation.yml
+++ b/.github/workflows/arti-object-creation.yml
@@ -15,10 +15,10 @@ jobs:
         uses: actions/checkout@v1
       - name: Parse the Issue
         run: |
-          ISSUEFILE=`echo "Issue description: ${{ github.event.issue.body}}"`
-          GITHUB_REPO1=`cat $ISSUEFILE | grep github.repo | cut -d= -f2`
-          ARTI_REPO_TYPE=`cat $ISSUEFILE | grep arti.repo.type | cut -d= -f2`
-          ARTI_REPO_PKG=`cat $ISSUEFILE | grep arti.repo.package | cut -d= -f2`
+          ISSUEFILE= ${{ github.event.issue.body}}
+          GITHUB_REPO1=`echo $ISSUEFILE | grep github.repo | cut -d= -f2`
+          ARTI_REPO_TYPE=`echo $ISSUEFILE | grep arti.repo.type | cut -d= -f2`
+          ARTI_REPO_PKG=`echo $ISSUEFILE | grep arti.repo.package | cut -d= -f2`
           ARTI_REPO_NAME=`echo "$GITHUB_REPO1-$ARTI_REPO_PKG-$ARTI_REPO_TYPE"`
       - name: Get Users from the repo
         run: |
