--- a/.github/workflows/arti-object-creation.yml
+++ b/.github/workflows/arti-object-creation.yml
@@ -18,6 +18,7 @@ jobs:
           echo ${{ github.event.issue.body}} > issue.body.txt
           ISSUEFILE= issue.body.txt
           echo $ISSUEFILE
+          which cut
           GITHUB_REPO1=`cat $ISSUEFILE | grep github.repo | cut -d'=' -f2`
           echo $GITHUB_REPO1
           ARTI_REPO_TYPE=`cat $ISSUEFILE | grep arti.repo.type | cut -d'=' -f2`
