--- a/.github/workflows/arti-object-creation.yml
+++ b/.github/workflows/arti-object-creation.yml
@@ -19,13 +19,13 @@ jobs:
           ISSUEFILE= issue.body.txt
           echo $ISSUEFILE
           which cut
-          GITHUB_REPO1=`cat $ISSUEFILE | grep github.repo | cut -d'=' -f2`
-          echo $GITHUB_REPO1
-          ARTI_REPO_TYPE=`cat $ISSUEFILE | grep arti.repo.type | cut -d'=' -f2`
-          echo $ARTI_REPO_TYPE
-          ARTI_REPO_PKG=`cat $ISSUEFILE | grep arti.repo.package | cut -d'=' -f2`
-          echo $ARTI_REPO_PKG
-          ARTI_REPO_NAME=`echo "$GITHUB_REPO1-$ARTI_REPO_PKG-$ARTI_REPO_TYPE"`
+          #GITHUB_REPO1=`cat $ISSUEFILE | grep github.repo | cut -d'=' -f2`
+          #echo $GITHUB_REPO1
+          #ARTI_REPO_TYPE=`cat $ISSUEFILE | grep arti.repo.type | cut -d'=' -f2`
+          #echo $ARTI_REPO_TYPE
+          #ARTI_REPO_PKG=`cat $ISSUEFILE | grep arti.repo.package | cut -d'=' -f2`
+          #echo $ARTI_REPO_PKG
+          #ARTI_REPO_NAME=`echo "$GITHUB_REPO1-$ARTI_REPO_PKG-$ARTI_REPO_TYPE"`
           echo $ARTI_REPO_NAME
       - name: Get Users from the repo
         run: |
