--- a/.github/workflows/arti-object-creation.yml
+++ b/.github/workflows/arti-object-creation.yml
@@ -15,11 +15,9 @@ jobs:
         uses: actions/checkout@v1
       - name: Parse the Issue
         run: |
-          echo "${{ github.event.issue.body}}" > "${{ github.workspace }}"/issue.body.txt
+          echo ${{ github.event.issue.body}} > ${{ github.workspace }}/issue.body.txt
           ISSUEFILE= "${{ github.workspace }}"/issue.body.txt
-          echo $ISSUEFILE
-          which cut
-          #GITHUB_REPO1=`cat $ISSUEFILE | grep github.repo | cut -d'=' -f2`
+          # GITHUB_REPO1=`cat $ISSUEFILE | grep github.repo | cut -d'=' -f2`
           #echo $GITHUB_REPO1
           #ARTI_REPO_TYPE=`cat $ISSUEFILE | grep arti.repo.type | cut -d'=' -f2`
           #echo $ARTI_REPO_TYPE
