--- a/.github/workflows/arti-object-creation.yml
+++ b/.github/workflows/arti-object-creation.yml
@@ -16,14 +16,14 @@ jobs:
       - name: Parse the Issue
         run: |
           echo ${{ github.event.issue.body}} > ${{ github.workspace }}/issue.body.txt
-          ISSUEFILE= "${{ github.workspace }}"/issue.body.txt
-          # GITHUB_REPO1=`cat $ISSUEFILE | grep github.repo | cut -d'=' -f2`
-          #echo $GITHUB_REPO1
-          #ARTI_REPO_TYPE=`cat $ISSUEFILE | grep arti.repo.type | cut -d'=' -f2`
-          #echo $ARTI_REPO_TYPE
-          #ARTI_REPO_PKG=`cat $ISSUEFILE | grep arti.repo.package | cut -d'=' -f2`
-          #echo $ARTI_REPO_PKG
-          #ARTI_REPO_NAME=`echo "$GITHUB_REPO1-$ARTI_REPO_PKG-$ARTI_REPO_TYPE"`
+          ISSUEFILE= ${{ github.workspace }}/issue.body.txt
+          GITHUB_REPO1=`cat $ISSUEFILE | grep github.repo | cut -d'=' -f2`
+          echo $GITHUB_REPO1
+          ARTI_REPO_TYPE=`cat $ISSUEFILE | grep arti.repo.type | cut -d'=' -f2`
+          echo $ARTI_REPO_TYPE
+          ARTI_REPO_PKG=`cat $ISSUEFILE | grep arti.repo.package | cut -d'=' -f2`
+          echo $ARTI_REPO_PKG
+          ARTI_REPO_NAME=`echo "$GITHUB_REPO1-$ARTI_REPO_PKG-$ARTI_REPO_TYPE"`
           echo $ARTI_REPO_NAME
       - name: Get Users from the repo
         run: |
