--- a/.github/workflows/arti-object-creation.yml
+++ b/.github/workflows/arti-object-creation.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v1
       - name: Parse the Issue
         run: |
-          echo ${{ github.event.issue.body}} > ${{ github.workspace }}/issue.body.txt
+          echo "${{ github.event.issue.body}}" > ${{ github.workspace }}/issue.body.txt
           ISSUEFILE=${{ github.workspace }}/issue.body.txt
           GITHUB_REPO1=`cat $ISSUEFILE | grep github.repo | cut -d'=' -f2`
           echo $GITHUB_REPO1
