--- a/.github/workflows/arti-object-creation.yml
+++ b/.github/workflows/arti-object-creation.yml
@@ -17,13 +17,13 @@ jobs:
         run: |
           echo "${{ github.event.issue.body}}" > ${{ github.workspace }}/issue.body.txt
           ISSUEFILE=${{ github.workspace }}/issue.body.txt
-          GITHUB_REPO1=`cat $ISSUEFILE | grep github.repo | cut -d'=' -f2`
+          GITHUB_REPO1=`cat $ISSUEFILE | grep github.repo | cut -d'=' -f2` | tr -d '\r'
           echo $GITHUB_REPO1
-          ARTI_REPO_TYPE=`cat $ISSUEFILE | grep arti.repo.type | cut -d'=' -f2`
+          ARTI_REPO_TYPE=`cat $ISSUEFILE | grep arti.repo.type | cut -d'=' -f2` | tr -d '\r'
           echo $ARTI_REPO_TYPE
-          ARTI_REPO_PKG=`cat $ISSUEFILE | grep arti.repo.package | cut -d'=' -f2`
+          ARTI_REPO_PKG=`cat $ISSUEFILE | grep arti.repo.package | cut -d'=' -f2` | tr -d '\r'
           echo $ARTI_REPO_PKG
-          ARTI_REPO_NAME=`echo "$GITHUB_REPO1-$ARTI_REPO_PKG-$ARTI_REPO_TYPE"`
+          ARTI_REPO_NAME=$GITHUB_REPO1-$ARTI_REPO_PKG-$ARTI_REPO_TYPE
           echo $ARTI_REPO_NAME
           curl -XGET -H "Authorization: token ${{ secrets.GH_ADMIN_TOKEN }}" https://api.github.com/repos/np-reddy/$GITHUB_REPO1/collaborators | jq -r '.[] | .login as $u | .permissions | ([$u, .admin, .maintain, .push, .triage, .pull] | @csv)' | tr -d '"' > github.users.map
           while read users
