--- a/.github/workflows/arti-object-creation.yml
+++ b/.github/workflows/arti-object-creation.yml
@@ -18,13 +18,13 @@ jobs:
           echo "${{ github.event.issue.body}}" > ${{ github.workspace }}/issue.body.txt
           ISSUEFILE=${{ github.workspace }}/issue.body.txt
           GITHUB_REPO1=`cat $ISSUEFILE | grep github.repo | cut -d'=' -f2 | tr -d '\r'`
-          echo $GITHUB_REPO1
+          echo $GITHUB_REPO1 > github-repo
           ARTI_REPO_TYPE=`cat $ISSUEFILE | grep arti.repo.type | cut -d'=' -f2 | tr -d '\r'`
-          echo $ARTI_REPO_TYPE
+          echo $ARTI_REPO_TYPE > arti-repo-type
           ARTI_REPO_PKG=`cat $ISSUEFILE | grep arti.repo.package | cut -d'=' -f2 | tr -d '\r'`
-          echo $ARTI_REPO_PKG
+          echo $ARTI_REPO_PKG > art-pkg-type
           ARTI_REPO_NAME=$GITHUB_REPO1-$ARTI_REPO_PKG-$ARTI_REPO_TYPE
-          echo $ARTI_REPO_NAME
+          echo $ARTI_REPO_NAME > arti-repo-name
           curl -XGET -H "Authorization: token ${{ secrets.GH_ADMIN_TOKEN }}" https://api.github.com/repos/np-reddy/$GITHUB_REPO1/collaborators | jq -r '.[] | .login as $u | .permissions | ([$u, .admin, .maintain, .push, .triage, .pull] | @csv)' | tr -d '"' > github.users.map
           while read users
           do
@@ -42,4 +42,26 @@ jobs:
           echo "$USER" >> readers.out
           fi
           done < github.users.map
+      - name: Set JFrog CLI
+        uses: jfrog/setup-jfrog-cli@v1
+        env:
+          JF_ARTIFACTORY_SERVER: ${{ secrets.JF_ARTIFACTORY_SERVER_1 }}
+      - name: create Artifactory objects
+        run: |
+          cp artifactory-templates/user-template.csv arti-user.csv
+          awk '{print "\""$0"\",\"Pwd1@"$0"\",\""$0"@dummy.com\""}' github.users.out >> arti-user.csv
+          jfrog rt uc --csv arti-user.csv
+          # jfrog rt udel --csv arti-user.csv --quiet
+          GITHUB_REPO1=`cat github-repo`
+          jfrog rt gc $GITHUB_REPO1-readers
+          while read reader; do jfrog rt gau $GITHUB_REPO1-readers $reader ; done < readers.out 
+          jfrog rt gc $GITHUB_REPO1-writers
+          while read writer; do jfrog rt gau $GITHUB_REPO1-writers $writer ; done < writers.out
+          jfrog rt gc $GITHUB_REPO1-admins
+          while read admin; do jfrog rt gau $GITHUB_REPO1-admins $admin ; done < writers.out
+          
+          
+          
+          
+         
         
