--- a/.github/workflows/arti-object-creation.yml
+++ b/.github/workflows/arti-object-creation.yml
@@ -53,12 +53,19 @@ jobs:
           jfrog rt uc --csv arti-user.csv
           # jfrog rt udel --csv arti-user.csv --quiet
           GITHUB_REPO1=`cat github-repo`
+          ARTI_REPO_NAME=`cat arti-repo-name`
+          ARTI_REPO_TYPE=`cat arti-repo-type`
+          ARTI_REPO_PKG=`cat art-pkg-type`
+          
           jfrog rt gc $GITHUB_REPO1-readers
           while read reader; do jfrog rt gau $GITHUB_REPO1-readers $reader ; done < readers.out 
           jfrog rt gc $GITHUB_REPO1-writers
           while read writer; do jfrog rt gau $GITHUB_REPO1-writers $writer ; done < writers.out
           jfrog rt gc $GITHUB_REPO1-admins
-          while read admin; do jfrog rt gau $GITHUB_REPO1-admins $admin ; done < writers.out
+          while read admin; do jfrog rt gau $GITHUB_REPO1-admins $admin ; done < admins.out
+          jfrog rt rc artifactory-templates/repo-template-local.json --vars "repo-name=$ARTI_REPO_NAME;pkg-type=ARTI_REPO_PKG"
+          jfrog rt ptc artifactory-templates/permission-target-template.json --vars "PERM_NAME=$GITHUB_REPO1-perm;ARTI_REPO_NAME=$ARTI_REPO_NAME;GITHUB_REPO1=$GITHUB_REPO1"      
+          
           
           
           
