--- a/.github/workflows/jfrog-cli.yml
+++ b/.github/workflows/jfrog-cli.yml
@@ -4,16 +4,17 @@ on: workflow_dispatch
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: mylaptop
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Setup JFrog CLI
-        uses: jfrog/setup-jfrog-cli@v1.2.0
-        with:
-          version: '2.2.0'
-        env:
-          JF_ARTIFACTORY_SERVER: ${{ secrets.JF_ARTIFACTORY_SERVER_1 }}
+      # - name: Checkout
+       # uses: actions/checkout@v1
+      # - name: Setup JFrog CLI
+      #  uses: jfrog/setup-jfrog-cli@v1.2.0
+      #  with:
+        #  version: '2.2.0'
+       # env:
+        #  JF_ARTIFACTORY_SERVER: ${{ secrets.JF_ARTIFACTORY_SERVER_1 }}
       - name: Run JFrog CLI
         run: |
           # Collect environment variables for the build
