--- a/.github/workflows/arti-object-creation.yml
+++ b/.github/workflows/arti-object-creation.yml
@@ -66,6 +66,6 @@ jobs:
           while read writer; do jfrog rt gau $GITHUB_REPO1-writers $writer ; done < writers.out
           jfrog rt gc $GITHUB_REPO1-admins
           while read admin; do jfrog rt gau $GITHUB_REPO1-admins $admin ; done < admins.out
-          jfrog rt rc repo-template-local.json --vars "repo-name=$ARTI_REPO_NAME;pkg-type=ARTI_REPO_PKG"
-          jfrog rt ptc permission-target-template.json --vars "PERM_NAME=$GITHUB_REPO1-perm;ARTI_REPO_NAME=$ARTI_REPO_NAME;GITHUB_REPO1=$GITHUB_REPO1" 
+          jfrog rt rc repo-template-local.json --vars "repo-name=${ARTI_REPO_NAME};pkg-type=${ARTI_REPO_PKG}"
+          jfrog rt ptc permission-target-template.json --vars "PERM_NAME=${GITHUB_REPO1}-perm;ARTI_REPO_NAME=${ARTI_REPO_NAME};GITHUB_REPO1=${GITHUB_REPO1}"
              
