--- a/.github/workflows/jfrog-cli.yml
+++ b/.github/workflows/jfrog-cli.yml
@@ -9,13 +9,10 @@ jobs:
     steps:
       # - name: Checkout
        # uses: actions/checkout@v1
-      # - name: Setup JFrog CLI
-      #  uses: jfrog/setup-jfrog-cli@v1.2.0
-      #  with:
-        #  version: '2.2.0'
-       # env:
-        #  JF_ARTIFACTORY_SERVER: ${{ secrets.JF_ARTIFACTORY_SERVER_1 }}
-      - name: Run JFrog CLI
-        run: |
-          jfrog rt gc testers12
-          jfrog -v
+       - name: Setup JFrog CLI
+         uses: jfrog/setup-jfrog-cli@v1.2.0
+         env:
+          JF_ARTIFACTORY_SERVER: ${{ secrets.JF_ARTIFACTORY_SERVER_1 }}
+       - name: Run JFrog CLI
+         run: |
+           jfrog -v
